[package]
name = "game"
version = "0.1.0"
edition = "2018"

[dependencies]
async-std = { version = "1.6.2" }
bevy = { version = "0.5.0" }
bevy_rapier3d = { version = "0.10.2", features = ["enhanced-determinism", "parallel", "serde-serialize"] }
bincode = "1.3.3"
futures = "0.3.15"
libp2p = { version = "0.38.0", default-features = false, features = [
    "deflate",
    "dns-async-std",
    "floodsub",
    "identify",
    "kad",
    "gossipsub",
    "mdns",
    "mplex",
    "noise",
    "ping",
    "plaintext",
    "pnet",
    "relay",
    "request-response",
    "secp256k1",
    "tcp-async-io",
    "uds",
    "websocket",
    "yamux",
] }
serde = "1.0.126"
